public/stylesheets/heypal.less
/* ... */
.align-images img {
  vertical-align: middle;
}

.align-right {
  text-align: right;
}

.align-center {
  .textCenter();
}

.float-right {
  .floatRight();
}

.float-left {
  .floatLeft();
}

section {
  margin-bottom: @baseline;
}

.center {
  .textCenter();
}

.edge-left {
  .edgeLeft();
}

.span-one-third     { width: 33%; }
.span-one-fourth    { width: 22%; }
.span-two-thirds    { width: 66%; }
.offset-smallest    { margin-left: 8%; }
.offset-one-eight   { margin-left: 12%; }
.offset-one-fourth  { margin-left: 15%; }
.offset-one-fourth2 { margin-left: 25%; }
.offset-one-third   { margin-left: 33%; }
.offset-two-thirds  { margin-left: 66%; }

aside .row, aside .media-grid, .aside .row, .aside .media-grid {
  .clearfix();
  margin-left: 0
}

.help-inline {
  color: @grayDark;
}

// Sup
// ---------
.sup{
  color: @grayLight;
  font-size: @smallfont;
}

a.sup {
  color: @linkColor;
  font-size: @smallfont;
}

.bottom {
  margin-bottom: 10px;
}

.bottom-large {
  margin-bottom: 30px;
}

.bottom-part {
  margin-top: 180px;
}
span.strong,
p.strong {
  font-weight: bold;
}

.u {
  text-decoration: underline;
}

.hr_line {
  border-top: 1px solid @grayLight;
  margin: 25px 0 10px 0;
}
// Layout

body > header{
  background: #fff;
  width: 100%;
  top: 0;
  position: absolute;
  z-index: 999;

  > .container {
    margin-top:10px;
    height: 82px;
  }
    
}

body {
  padding: 114px 0 10px;
}

.container > footer p {
  text-align: center; 
}

.header .pull-right {
  float: right;
}

/* The white background content wrapper */
.content {
  background-color: #fff;
  padding: 30px 0;
}

/* Give a quick and non-cross-browser friendly divider */
.content aside, .content .aside {
  margin-left: 5px;
  padding-left: 14px;
  border-left: 1px solid #eee;
}

label.for-checkbox {
  float:none;
}

// Header
// ---------

.header {
  .user_box {
    
    .user_name {
      font-weight: bold;
      font-size: 1.2em;
      color: @grayDark;
    }

    .small, .small a {
      font-weight: normal;
      font-size: 11px;
      color: #888;
    }

    .links {
      text-align:right
    }
  }

  .preference {
    cursor:pointer;
    text-align: right;
    font-color: #00ff00;

    span.edit-icon {
     height:13px;
      width:13px;
      display:inline-block;
      background: transparent url(../images/icon.pencil.png) 0 0;
    }
  }
}


.topbar.sticky {
  position: fixed;
  top: 0;
  width: 100%;
}


#country-select {
  list-style-type:none;
  position: absolute;
  margin: 0 100px 0 230px;
  top: 275px;
  display: none;
  background: #fff;
  border:1px solid #404040;
  border-radius:5px;

  li {
    background-color:#36C;
    padding:5px 5px 15px;
    line-height: 27px;
    color: #FFF;
    border-bottom:1px solid #404040;
    font-size:16px;

    &.arrow {
      background: transparent url(../images/blue.drop.png) no-repeat;
      width:10px;
      border:none;
      top:-11px;
      right:30px;
      position:absolute;
    }

    a {
      color: #FFF;
      font-style: italic;
      font-size: 10px;
    }
  }
  
  li:first-child + li {
    -webkit-border-top-left-radius: 4px;
    -webkit-border-top-right-radius: 4px;
    -moz-border-radius-topleft: 4px;
    -moz-border-radius-topright: 4px;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
  }
  li:last-child {
    line-height: 17px;
    border-bottom:none;
    padding-bottom:5px;
    -webkit-border-bottom-right-radius: 4px;
    -webkit-border-bottom-left-radius: 4px;
    -moz-border-radius-bottomright: 4px;
    -moz-border-radius-bottomleft: 4px;
    border-bottom-right-radius: 4px;
    border-bottom-left-radius: 4px;
  }
}


#fp-liner {
  float: left;
  color: #99CCFF;
  p {
    line-height: .7;

    &:last-child {
      margin-left: 75px;
    }
  }
  span {
    font-size: 12px;
  }
  b {
    font-weight: normal;
    font-size: 18px;
  }
}

// Announce
// ----------

.announce {
  margin: 0 0 @baseline;
  padding: 10px 14px;
  line-height: 2em;
  #gradient > .vertical(#ffffff, #f5f5f5);
  border: 1px solid #ddd;
  .textCenter();
  .border-radius(3px);
  .box-shadow(inset 0 1px 0 @white);
  li {
    display: inline;
    text-shadow: 0 1px 0 @white;
  }
  .divider {
    padding: 0 5px;
    color: @grayLight;
  }
  a {
  }
  .active a {
    color: @grayDark;
  }

  h2 {
    font-size: 16px;
    line-height: 1em;
  }
}

// Label (overrides)
// ---------

.label {
  font-size: 10px;
  padding: 2px 5px;
  font-weight: normal;
  &.new { background-color:  darken(@blue, 25%) }
  &.like_new   { background-color: @blue }
  &.nearby     { background-color: @green; }
  &.notice     { background-color: darken(@blue, 25%); }
}


// Form Overrides
// ----------

label {
  padding-top: 6px;
  font-size: @basefont;
  line-height: @baseline;
  float: left;
  width: 200px;
  text-align: left;
  color: @grayDark;
}

form .input {
  display: block;
  clear: left;
  margin: 10px 10px; 
}

select {
  width: auto;
}

.input-append {
  p {
    float: left;
    border: 1px solid #CCC;
    .border-radius(0 3px 3px 0);
    height: 28px;
    line-height: 28px;
    margin-right: -2px;
    padding-left: 5px;
    padding-right: 2px;
    font-size: 12px;
  }
}
.active-photo {
  background: @grayLight;
  padding: 20px 40px;
}
.active-label {
  margin: 10px;
}
.active-label button {
  padding: 5px 10px;
}
.inline-edit-hover {
  background: none;
  width: auto;
  text-decoration: underline;
}

p.help-inline {
  margin-left: 200px;
}

form div.required label:after {
  content: " *";
}

// Item
// ----------

.item-detail {

  .row {

  }
  .span2 {
    // .edgeLeft();
  }

  .image {
    border:1px solid @grayLight;
    padding: 10px;
    
    img{ 
      display: block; 
    }
  }

  h1 {
    font-size: 26px;
    line-height: 1em;
    margin-bottom: 5px;
  }

  .labels {
   margin-bottom: @baseline;
  }

  .description {
  }

  .environmental {
  }

  .location {

  }

 

}
/* ... */

